syntax = "proto3";

package dronecontrol;

service DroneService {
  rpc GetDirection(DirectionRequest) returns (DirectionResponse);
}

// DEFINE DIRECTION REQUEST
message DirectionRequest {
  DroneState drone_state = 1;
}
// define drone state
message DroneState {
  float x = 1;
  float y = 2;
  float z = 3;
}


// DEFINE DIRECTION RESPONSE
message DirectionResponse {
  oneof control_type {
    DiscreteHeading discrete_heading = 2;
    ContinuousHeading continuous_heading = 3;
  }
}

message DiscreteHeading { 
  HeadingDirection direction = 1;
}

enum HeadingDirection {
  RESERVED = 0;
  STRAIGHT = 1;
  LEFT = 2;
  HARD_LEFT = 3;
  RIGHT = 4;
  HARD_RIGHT = 5;
}

message ContinuousHeading { float rad = 1; }
